name:                himg
version:             0.1.0.0
synopsis:            Simple gtk2hs image viewer. Point it at an image and fire away.
description:         Simple gtk2hs image viewer. Point it at an image and fire away.
                     The only ‘fancy’ feature is the ability to work with Internet URLs.
homepage:            http://github.com/Fuuzetsu/himg
license:             GPL-3
license-file:        LICENSE
author:              Mateusz Kowalczyk
maintainer:          fuuzetsu@fuuzetsu.co.uk
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

executable himg
  -- main-is:
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.6 && <4.8, gtk2hs
  hs-source-dirs:      src
  default-language:    Haskell2010